--- a/Copy_of_Module_01_Lab_02_MLPractice.ipynb
+++ b/Copy_of_Module_01_Lab_02_MLPractice.ipynb
@@ -72,7 +72,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3fda75d1-be48-4260-a0c9-c112e2c1e20f"
+        "outputId": "6cb4bd08-7620-40cf-8722-c3f771e7ab32"
       },
       "source": [
         " dataset =  datasets.fetch_california_housing()\n",
@@ -228,7 +228,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00db9ba6-a41f-463a-e341-83ccbb353d33"
+        "outputId": "590589aa-9c6d-400d-880c-e8cbf26fa5cb"
       },
       "source": [
         "testdata, testlabel, alltraindata, alltrainlabel = split(dataset.data, dataset.target, 20/100)\n",
@@ -287,7 +287,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "726f1631-1025-49ea-d81c-53ab84bf1741"
+        "outputId": "e75c23f7-5674-4966-8d8b-7f86ab40c3e9"
       },
       "source": [
         "trainpred = NN(traindata, trainlabel, traindata)\n",
@@ -328,7 +328,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fe3b39c3-21a2-42a2-e290-0e6639ccdf0f"
+        "outputId": "71be4fe2-4def-4e0a-85d5-4d99c99857ff"
       },
       "source": [
         "valpred = NN(traindata, trainlabel, valdata)\n",
@@ -369,7 +369,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eb48d50e-22b2-4c03-8379-fdc7908f51fd"
+        "outputId": "9943e9b0-f624-42be-aa75-6a5bbc877422"
       },
       "source": [
         "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 75/100)\n",
@@ -407,7 +407,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5077948c-6886-4a66-bd10-7a5a6edc69b2"
+        "outputId": "22b3afc5-07ca-4697-e27a-20ec50b3bd48"
       },
       "source": [
         "testpred = NN(alltraindata, alltrainlabel, testdata)\n",
@@ -438,6 +438,27 @@
         "\n",
         "Answer for both nearest neighbour and random classifier. You can note down the values for your experiments and plot a graph using  <a href=https://matplotlib.org/stable/gallery/lines_bars_and_markers/step_demo.html#sphx-glr-gallery-lines-bars-and-markers-step-demo-py>plt.plot<href>. Check also for extreme values for splits, like 99.9% or 0.1%"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Question 1\n",
+        "\n",
+        "There is no effect for the accuracy if we increase the percentage of validation set.If we reduce the percentage of validation set we don't get the best accuracy.\n",
+        "\n",
+        " QUESTION 2\n",
+        "\n",
+        "The training set should not small.If the validation set is too small ,then the evaluation matrics like accuracy,precision,recall and F score will have large variance and will not lead to proper tanning of model.\n",
+        "\n",
+        " QUESTION 3\n",
+        "\n",
+        "In general putting 80% of the data in training set,10% in the validation set,and 10% in the test set is a good to start. Train set depends on factor such as structure of model,dimension of data."
+      ],
+      "metadata": {
+        "id": "uym-hX2yFLHH"
+      }
     },
     {
       "cell_type": "markdown",
@@ -475,7 +496,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "53faecf3-ca84-4a52-e035-860ff68ab797"
+        "outputId": "7499392e-efb0-4300-dd68-55c0d0578fec"
       },
       "source": [
         "print('Average validation accuracy is ', AverageAccuracy(alltraindata, alltrainlabel, 75/100, 10, classifier=NN))\n",
@@ -506,7 +527,7 @@
         "1. Does averaging the validation accuracy across multiple splits give more consistent results?\n",
         "2. Does it give more accurate estimate of test accuracy?\n",
         "3. What is the effect of the number of iterations on the estimate? Do we get a better estimate with higher iterations?\n",
-        "4. Consider the results you got for the previous questions. Can we deal with a very small train dataset or validation dataset by increasing the iterations?"
+        "4. Consider the results you got for the previous questions. Can we deal with a very small train dataset or validation dataset by increasing the iterations?\n"
       ]
     },
     {
@@ -529,17 +550,8 @@
         "Increasing the number of iterations in cross-validation can help when dealing with small datasets. It allows you to use your limited data more effectively by repeatedly splitting it into training and validation sets. However, there are limits to how much this can compensate for a very small dataset. If your dataset is extremely small, you might still face challenges related to overfitting or underfitting, and more data collection or data augmentation techniques may be necessary to improve model performance."
       ],
       "metadata": {
-        "id": "aNqPq_gt4dxx"
+        "id": "jzAKSlpDFV89"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "QSBjew3x4cd-"
-      },
-      "execution_count": 14,
-      "outputs": []
     }
   ]
 }
